Added new project

--- a/es.html
+++ b/es.html
@@ -188,6 +188,49 @@
 
         <article class="project flex">
           <div class="project-info project-info-right">
+            <h3 class="project-title contrast-color">
+              Bank ATM API REST
+            </h3>
+            <div class="project-container flex">
+              <ul class="project-stack flex">
+                <li>
+                  <span class="netcore">
+                    <object type="image/svg+xml" data="assets/svg/tech/netcore.svg" width="64" height="64"></object> 
+                    .Net Core 8
+                  </span>
+                </li>
+                <li>
+                  <span>
+                    <object type="image/svg+xml" data="assets/svg/tech/cleanarchitecture.svg" width="64" height="64"></object>
+                    Clean Architecture
+                  </span>
+                </li>
+                <li>
+                  <span>
+                    <object type="image/svg+xml" data="assets/svg/tech/entityframework.svg" width="64" height="64"></object>
+                    Entity Framework
+                  </span>
+                </li>
+              </ul>
+              <div class="project-text contrast-color">
+                API RESTful de cajero automático desarrollada con .NET 8 utilizando Clean Architecture, CQRS y autenticación JWT. Usa EF Core InMemory, Swagger y pruebas con xUnit.</div>
+              <footer class="project-buttons flex">
+                <a class="code" href="https://github.com/c-franco/bank-atm-api-rest" target="_blank">
+                  <object type="image/svg+xml" data="assets/svg/code.svg"></object>
+                  Código
+                </a>
+              </footer>
+            </div>
+          </div>
+          <div class="project-img">
+            <div class="img-border flex">
+              <img src="/assets/img/bankATM.webp" alt="" />
+            </div>
+          </div>
+        </article>
+        
+        <article class="project flex">
+          <div class="project-info project-info-right">
             <h3 class="project-title contrast-color">CSS Storage - Extensión VSCode</h3>
             <div class="project-container flex">
               <ul class="project-stack flex">
@@ -216,52 +259,6 @@
           <div class="project-img">
             <div class="img-border flex">
               <img src="/assets/img/css-storage.webp" alt="" />
-            </div>
-          </div>
-        </article>
-
-        <article class="project flex">
-          <div class="project-info project-info-right">
-            <h3 class="project-title contrast-color">LinkVault - Organizador de URL</h3>
-            <div class="project-container flex">
-              <ul class="project-stack flex">
-                <li>
-                  <span>
-                    <object type="image/svg+xml" data="assets/svg/tech/java.svg" width="64" height="64"></object>
-                    Java
-                  </span>
-                </li>
-                <li>
-                  <span>
-                    <object type="image/svg+xml" data="assets/svg/tech/androidstudio.svg" width="64" height="64"></object>
-                    Android Studio
-                  </span>
-                </li>
-                <li>
-                  <span>
-                    <object type="image/svg+xml" data="assets/svg/tech/sqlite.svg" width="64" height="64"></object>
-                    SQLite
-                  </span>
-                </li>
-              </ul>
-              <div class="project-text contrast-color">
-                Aplicación para Android que simplifica la gestión de tus enlaces y te da acceso instantáneo a ellos con un solo toque. Disponible en Google Play Store.
-              </div>
-              <footer class="project-buttons flex">
-                <a class="preview" href="https://play.google.com/store/apps/details?id=com.breathink.linkvault" target="_blank">
-                  <object type="image/svg+xml" data="assets/svg/demo.svg"></object>
-                  Demo
-                </a>
-                <a class="code" href="https://github.com/c-franco/link-vault" target="_blank">
-                  <object type="image/svg+xml" data="assets/svg/code.svg"></object>
-                  Código
-                </a>
-              </footer>
-            </div>
-          </div>
-          <div class="project-img">
-            <div class="img-border flex">
-              <img src="/assets/img/linkvault.webp" alt="" />
             </div>
           </div>
         </article>
