--- a/index.html
+++ b/index.html
@@ -193,6 +193,49 @@
         <article class="project flex">
           <div class="project-info project-info-right">
             <h3 class="project-title contrast-color">
+              Bank ATM API REST
+            </h3>
+            <div class="project-container flex">
+              <ul class="project-stack flex">
+                <li>
+                  <span class="netcore">
+                    <object type="image/svg+xml" data="assets/svg/tech/netcore.svg" width="64" height="64"></object> 
+                    .Net Core 8
+                  </span>
+                </li>
+                <li>
+                  <span>
+                    <object type="image/svg+xml" data="assets/svg/tech/cleanarchitecture.svg" width="64" height="64"></object>
+                    Clean Architecture
+                  </span>
+                </li>
+                <li>
+                  <span>
+                    <object type="image/svg+xml" data="assets/svg/tech/entityframework.svg" width="64" height="64"></object>
+                    Entity Framework
+                  </span>
+                </li>
+              </ul>
+              <div class="project-text contrast-color">
+                RESTful ATM API built with .NET 8 using Clean Architecture, CQRS, and JWT authentication. Uses EF Core InMemory, Swagger, and testing with xUnit.</div>
+              <footer class="project-buttons flex">
+                <a class="code" href="https://github.com/c-franco/bank-atm-api-rest" target="_blank">
+                  <object type="image/svg+xml" data="assets/svg/code.svg"></object>
+                  Code
+                </a>
+              </footer>
+            </div>
+          </div>
+          <div class="project-img">
+            <div class="img-border flex">
+              <img src="/assets/img/bankATM.webp" alt="" />
+            </div>
+          </div>
+        </article>
+
+        <article class="project flex">
+          <div class="project-info project-info-right">
+            <h3 class="project-title contrast-color">
               CSS Storage - VSCode extension
             </h3>
             <div class="project-container flex">
@@ -226,53 +269,6 @@
           </div>
         </article>
 
-        <article class="project flex">
-          <div class="project-info project-info-right">
-            <h3 class="project-title contrast-color">
-              LinkVault - Url manager
-            </h3>
-            <div class="project-container flex">
-              <ul class="project-stack flex">
-                <li>
-                  <span>
-                    <object type="image/svg+xml" data="assets/svg/tech/java.svg" width="64" height="64"></object>
-                    Java
-                  </span>
-                </li>
-                <li>
-                  <span>
-                    <object type="image/svg+xml" data="assets/svg/tech/androidstudio.svg" width="64" height="64"></object>
-                    Android Studio
-                  </span>
-                </li>
-                <li>
-                  <span>
-                    <object type="image/svg+xml" data="assets/svg/tech/sqlite.svg" width="64" height="64"></object>
-                    SQLite
-                  </span>
-                </li>
-              </ul>
-              <div class="project-text contrast-color">
-                Android app that simplifies the management of your favorite links and gives you instant access to them with just one tap. Avalaible on Google Play Store.
-              </div>
-              <footer class="project-buttons flex">
-                <a class="preview" href="https://play.google.com/store/apps/details?id=com.breathink.linkvault" target="_blank">
-                  <object type="image/svg+xml" data="assets/svg/demo.svg"></object>
-                  Demo
-                </a>
-                <a class="code" href="https://github.com/c-franco/link-vault" target="_blank">
-                  <object type="image/svg+xml" data="assets/svg/code.svg"></object>
-                  Code
-                </a>
-              </footer>
-            </div>
-          </div>
-          <div class="project-img">
-            <div class="img-border flex">
-              <img src="/assets/img/linkvault.webp" alt="" />
-            </div>
-          </div>
-        </article>
       </div>
 
       <div class="more-projects flex width100">
