--- a/es.html
+++ b/es.html
@@ -24,7 +24,7 @@
     <div id="header" class="header-container width100">
       <header>
         <div class="logo">
-          <img class="pointer" src="/assets/svg/logo.svg" onclick="scrollToTop()" alt="Personal logo" />
+          <img class="pointer" src="/assets/svg/logo.svg" onclick="scrollToTop()" />
         </div>
         <nav id="nav">
           <ul>
