--- a/es.html
+++ b/es.html
@@ -8,10 +8,10 @@
     <script src="script.js"></script>
     <link rel="icon" href="/assets/svg/logo.svg" type="image/x-icon" sizes="any" />
     <title>Christian Franco</title>
-    <meta name="description" content="Desarrollador full-stack. +3 años de experiencia en desarrollo de software." />
+    <meta name="description" content="Desarrollador de software con más de 3 años de experiencia." />
     <meta name="author" content="Christian Franco" />
     <meta property="og:title" content="Christian Franco" />
-    <meta property="og:description" content="Desarrollador full-stack. +3 años de experiencia en desarrollo de software." />
+    <meta property="og:description" content="Desarrollador de software con más de 3 años de experiencia." />
     <meta property="og:url" content="https://christianfranco.dev/" />
     <meta property="og:site_name" content="Christian Franco" />
     <meta property="og:image" content="https://christianfranco.dev/assets/img/og-image.png" />
@@ -69,7 +69,7 @@
         </div>
         <header class="info">
           <h1 class="info-title contrast-color">Hey, soy <span class="purple">Christian Franco</span></h1>
-          <span class="info-subtitle">Full-Stack Developer</span>
+          <span class="info-subtitle">Software Developer</span>
           <h2 class="info-text contrast-color">Desarrollador de software con un fuerte enfoque en back-end. Ubicado en España. <span class="purple">+3 años de experiencia</span> y compromiso continuo de crecimiento.</h2>
           <ul class="social-media flex">
             <li>
@@ -112,7 +112,7 @@
                 </div>
               </div>
               <div class="right-info flex contrast-color">
-                Desarrollo de aplicaciones y APIs REST con .NET Core (C#) para back-end y Angular (TypeScript) para front-end, utilizando SQL Server y PostgreSQL. Realización de valoración de desarrollos, analizando requerimientos, estimando tiempos y recursos necesarios. Uso de herramientas como GitLab, Postman y Jira en un entorno ágil.              
+                Desarrollo de aplicaciones y APIs REST con .NET Core (C#) y gestión de bases de datos en SQL Server y PostgreSQL. Análisis de requerimientos, estimación de desarrollos y trabajo en entornos ágiles usando GitLab, Postman y Jira. Integración puntual de funcionalidades en Angular cuando es necesario.              
               </div>
             </div>
           </li>
@@ -129,7 +129,7 @@
                 </div>
               </div>
               <div class="right-info flex contrast-color">
-                Desarrollo y mantenimiento de una aplicación web de gestión económica utilizando C# ASP.NET MVC y SQL Server. Implementación de mejoras de código, pruebas y creación de un pipeline de integración continua.
+                Desarrollo y mantenimiento de una aplicación web de gestión económica con C# ASP.NET MVC y SQL Server. Mejora del código, realización de pruebas y participación en la creación de un pipeline de integración continua con herramientas como GitLab, NUnit, SonarQube, DocFX y Jenkins.
               </div>
             </div>
           </li>
@@ -288,7 +288,7 @@
 
           <p>
             Actualmente soy
-            <span class="purple">desarrollador full-stack</span> con un <span class="purple">fuerte enfoque en backend</span> y sólidos conocimientos en desarrollo web, con 3 años de experiencia en desarrollo de software.
+            <span class="purple">desarrollador de software</span> con un <span class="purple">fuerte enfoque en backend</span> y sólidos conocimientos en desarrollo web, con 3 años de experiencia en desarrollo de software.
           </p>
 
           <p>
