--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script src="script.js"></script>
     <link rel="icon" href="/assets/svg/logo.svg" type="image/x-icon" sizes="any" />
     <title>Christian Franco</title>
-    <meta name="description" content="Full-stack developer based in Spain. +3 years of experience in software development." />
+    <meta name="description" content="Software developer from Spain with over 3 years of experience." />
     <meta name="author" content="Christian Franco" />
     <meta property="og:title" content="Christian Franco" />
-    <meta property="og:description" content="Full-stack developer based in Spain. +3 years of experience in software development." />
+    <meta property="og:description" content="Software developer from Spain with over 3 years of experience." />
     <meta property="og:url" content="https://christianfranco.dev/" />
     <meta property="og:site_name" content="Christian Franco" />
     <meta property="og:image" content="https://christianfranco.dev/assets/img/og-image.png" />
@@ -69,7 +69,7 @@
         </div>
         <header class="info">
           <h1 class="info-title contrast-color">Hey, I'm <span class="purple">Christian Franco</span></h1>
-          <span class="info-subtitle">Full-Stack Developer</span>
+          <span class="info-subtitle">Software Developer</span>
           <h2 class="info-text contrast-color">
             Software developer with a strong focus on back-end, based in Spain.
             <span class="purple">+3 years of experience</span> and an ongoing commitment to growth.
@@ -115,7 +115,7 @@
                 </div>
               </div>
               <div class="right-info flex contrast-color">
-                Development of applications and REST APIs with .NET Core (C#) for back-end and Angular (TypeScript) for front-end, using SQL Server and PostgreSQL. Performing development assessment, analyzing requirements, estimating time and resources needed. Use of tools such as GitLab, Postman and Jira in an agile environment.              </div>
+                Development of applications and REST APIs using .NET Core (C#), working with SQL Server and PostgreSQL. Requirements analysis, effort estimation, and agile collaboration using GitLab, Postman, and Jira. Occasional integration of front-end functionalities with Angular when needed.</div>
             </div>
           </li>
           <li>
@@ -131,7 +131,7 @@
                 </div>
               </div>
               <div class="right-info flex contrast-color">
-                Development and maintenance of an economic management web application using C# ASP.NET MVC and SQL Server. Implementation of code improvements, testing and creation of a continuous integration pipeline.
+                Development and maintenance of an economic management web application using C# ASP.NET MVC and SQL Server. Code improvements, testing, and contribution to the creation of a continuous integration pipeline with tools such as GitLab, NUnit, SonarQube, DocFX, and Jenkins.
               </div>
             </div>
           </li>
@@ -295,7 +295,7 @@
 
           <p>
             I am currently a
-            <span class="purple">full-stack developer</span> with a <span class="purple">strong focus on back-end</span> and solid knowledge in web development, with 3 years of experience in software development.
+            <span class="purple">software developer</span> with a <span class="purple">strong focus on back-end</span> and solid knowledge in web development, with 3 years of experience in software development.
           </p>
 
           <p>
